# mdhaus

./: .gitignore  FEATURES.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: update-cask-sha.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: markdown-io.toml
src-tauri/src/: backup.rs  git_info.rs  lib.rs  main.rs  watcher.rs  workspace_scan.rs
src/components/: AppShell.vue  BacklinksSidebar.vue  CommitModal.vue  CreateFolderModal.vue  DiffModal.vue  EditorFontSizeControl.vue  ExternalChangeModal.vue  FileContextMenu.vue  FileTabsBar.vue  FileTreeNode.vue  FileTreeSidebar.vue  FrontMatterSidebar.vue  GitDetailsModal.vue  GitStatusBadge.vue  InstructionsModal.vue  LanguageSwitcher.vue  LayoutSwitcher.vue  MarkdownEditor.vue  MarkdownGuide.vue  MarkdownPreview.vue  NewFileModal.vue  RenameFileModal.vue  ShortcutsModal.vue  SplitPane.vue  SyntaxSidebar.vue  TagsSidebar.vue  ThemeSwitcher.vue
src/composables/: useDocument.ts  useEditorFontSize.ts  useKeyboardShortcuts.ts  useWorkspace.ts
src/i18n/: index.ts  types.ts  useI18n.ts
src/lib/: backlinks.ts  brand.ts  documentStats.ts  editorTheme.ts  exportHtmlDocument.ts  favorites.ts  fileTemplates.ts  fileTree.ts  frontMatter.ts  gitCommitMessage.ts  headings.ts  imageDrop.ts  katexMath.ts  lineDiff.ts  markdown.ts  markdownGuide.ts  mermaidRender.ts  printDocument.ts  recentPaths.ts  (+3 more)
(+18 files in other folders)
