[package]
name = "mdhaus"
version = "0.1.0"
description = "Open-source Markdown editor with live split-pane preview"
authors = ["Klanghaus"]
edition = "2021"

[lib]
name = "mdhaus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
